--- a/README
+++ b/README
@@ -8,10 +8,9 @@ do SESI Bebedouro.
 - [1] Demonstrar um projeto simples utilizando que integra front-back-bd
 - [2] Criar paginas de front-end web utilizando o minimo de bibliotecas possivel
 - [3] Criar um back-end em forma de API REST
-- [4] 
 
 ## 📦 Pré-requisitos
 
 Antes de começar, certifique-se de atender aos seguintes requisitos:
-- [1] Olhe os arquivos REDME dentro das pastas /front-end e /back-end para o passo a passo das instalações de dependencias e configurações basicas
+- [1] Olhe os arquivos README dentro das pastas /front-end e /back-end para o passo a passo das instalações de dependencias e configurações basicas
 - [2] Leia os slides disponibilizados na plataforma Google Classroom para melhor compreensão do conteudo.
